--- a/public/index.html
+++ b/public/index.html
@@ -17,41 +17,44 @@
         <div class="collapse navbar-collapse" id="navbarColor02">
           <ul class="navbar-nav me-auto">
             <li class="nav-item">
-              <a class="nav-link" href="#">Features</a>
+              <a class="nav-link" href="#">Language</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="#">Pricing</a>
+              <a class="nav-link" href="#">People</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="#">About</a>
+              <a class="nav-link" href="#">City</a>
             </li>
-            <li class="nav-item dropdown">
-              <a class="nav-link dropdown-toggle" data-bs-toggle="dropdown" href="#" role="button" aria-haspopup="true" aria-expanded="false">Dropdown</a>
-              <div class="dropdown-menu">
-                <a class="dropdown-item" href="#">Action</a>
-                <a class="dropdown-item" href="#">Another action</a>
-                <a class="dropdown-item" href="#">Something else here</a>
+            <li class="nav-item">
+              <a class="nav-link" href="#">Country</a>
+            </li>
+            <li class="nav-item dropdown" style="position: fixed; right: 3%;">
+              <a class="nav-link dropdown-toggle" data-bs-toggle="dropdown" href="#" role="button" aria-haspopup="true" aria-expanded="false">Identity Menu</a>
+              <div class="dropdown-menu" style="background-color: #00ffffd7;"  >
+                
+                <a class="dropdown-item" href="#" >Show All User</a>
                 <div class="dropdown-divider"></div>
-                <a class="dropdown-item" href="#">Separated link</a>
+                <a class="dropdown-item" href="#">Show All Roll</a>
+                
               </div>
             </li>
           </ul>
-          <form class="d-flex">
+          <!-- <form class="d-flex">
             <input class="form-control me-sm-2" type="text" placeholder="Search">
             <button class="btn btn-secondary my-2 my-sm-0" type="submit">Search</button>
-          </form>
+          </form> -->
         </div>
       </div>
     </nav>
 
-    <div id="root">Hej  </div>
+    <div id="root"></div>
     <div id="root_1"></div>
     <div id="root_2"></div>
     <div id="root_3"></div>
-    <div id="root_3"></div>
+    <div id="root_4"></div>
 
 
-    <footer class="bg-light text-center text-lg-start" >
+    <footer class="bg-light text-center text-lg-start" style="position: fixed; width: 100%; bottom: 0;" >
       <div class="text-center p-3" style="background-color: rgba(45, 38, 143, 0.2);">
         © 2022 Copyright : Ali Khawari
       </div>
