--- a/public/index.html
+++ b/public/index.html
@@ -10,49 +10,41 @@
     <noscript> this scropt is here if user brower isnt enable for javaScript </script></noscript>
     <nav class="navbar navbar-expand-lg navbar-light bg-info">
       <div class="container-fluid">
-        <a class="navbar-brand" href="#">Home</a>
-        <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarColor02" aria-controls="navbarColor02" aria-expanded="false" aria-label="Toggle navigation">
-          <span class="navbar-toggler-icon"></span>
-        </button>
-        <div class="collapse navbar-collapse" id="navbarColor02">
-          <ul class="navbar-nav me-auto">
-            <li class="nav-item">
-              <a class="nav-link" href="#">Language</a>
-            </li>
-            <li class="nav-item">
-              <a class="nav-link" href="#">People</a>
-            </li>
-            <li class="nav-item">
-              <a class="nav-link" href="#">City</a>
-            </li>
-            <li class="nav-item">
-              <a class="nav-link" href="#">Country</a>
-            </li>
-            <li class="nav-item dropdown" style="position: fixed; right: 3%;">
-              <a class="nav-link dropdown-toggle" data-bs-toggle="dropdown" href="#" role="button" aria-haspopup="true" aria-expanded="false">Identity Menu</a>
-              <div class="dropdown-menu" style="background-color: #00ffffd7;"  >
-                
-                <a class="dropdown-item" href="#" >Show All User</a>
-                <div class="dropdown-divider"></div>
-                <a class="dropdown-item" href="#">Show All Roll</a>
-                
-              </div>
-            </li>
-          </ul>
-          <!-- <form class="d-flex">
-            <input class="form-control me-sm-2" type="text" placeholder="Search">
-            <button class="btn btn-secondary my-2 my-sm-0" type="submit">Search</button>
-          </form> -->
-        </div>
+        <a class="navbar-brand" href="#">Home (people)</a>
+         <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarColor02" aria-controls="navbarColor02" aria-expanded="false" aria-label="Toggle navigation">
+           <span class="navbar-toggler-icon"></span>
+         </button>
+         <div class="collapse navbar-collapse" id="navbarColor02">
+           <ul class="navbar-nav me-auto">
+             <li class="nav-item">
+                  <a class="nav-link" href="#">Language ur funktion </a>
+              </li>
+             <li class="nav-item">
+                   <a class="nav-link" href="#">People ur funktion</a>
+              </li>
+             <li class="nav-item">
+                  <a class="nav-link" href="#">City ur funktion</a>
+             </li>
+              <li class="nav-item">
+                 <a class="nav-link" href="#">Country ur funktion</a>
+             </li>
+              <li class="nav-item dropdown" style="position: fixed; right: 3%;">
+                    <a class="nav-link dropdown-toggle" data-bs-toggle="dropdown" href="#" role="button" aria-haspopup="true" aria-expanded="false">Identity Menu dont touch</a>
+                <div class="dropdown-menu" style="background-color: #00ffffd7;"  >
+                          <a class="dropdown-item" href="#" >Show All User</a>
+                      <div class="dropdown-divider"></div>
+                          <a class="dropdown-item" href="#">Show All Roll</a>
+                      </div>
+                 </li>
+            </ul>
+         </div>
       </div>
-    </nav>
+  </nav>
+
+
 
     <div id="root"></div>
-    <div id="root_1"></div>
-    <div id="root_2"></div>
-    <div id="root_3"></div>
-    <div id="root_4"></div>
-
+    <div id="root2"></div>
 
     <footer class="bg-light text-center text-lg-start" style="position: fixed; width: 100%; bottom: 0;" >
       <div class="text-center p-3" style="background-color: rgba(45, 38, 143, 0.2);">
